@@ -10,6 +10,9 @@ Incompatible changes
 Deprecated
 ----------
 
+* The ``module`` argument of ``sphinx.ext.autosummary.generate.
+  find_autosummary_in_docstring()``
+
 Features added
 --------------
 
